--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,17 @@
   <body>
     <header class="header">
       <a class="toppage" href="/">HABIT</a>
-      <a class="create" href="/schedules/new">作成する</a>
+      <% if user_signed_in? %>
+        <div class="user_nav grid-6">
+          <%= link_to "マイページ", user_path(current_user.id) %>
+          <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+        </div>
+      <% else %>
+        <div class="grid-6">
+          <%= link_to "ログイン", new_user_session_path, class: "post" %>
+          <%= link_to "新規登録", new_user_registration_path, class: "post" %>
+        </div>
+      <% end %>
     </header>
     <%= yield %>
   </body>
