--- a/app/views/schedules/new.html.erb
+++ b/app/views/schedules/new.html.erb
@@ -1,7 +1,4 @@
 <div class="contents">
   <h3>作成する</h3>
-  <%= form_with(model: @schedule, local: true) do |form| %>
-    <%= form.text_field :text, placeholder: "text" %>
-    <%= form.submit "作成" %>
-  <% end %>
+  <%= render partial: "form", locals: { schedule: @schedule } %>
 </div>
