--- a/app/views/schedules/show.html.erb
+++ b/app/views/schedules/show.html.erb
@@ -2,10 +2,10 @@
   <p><%= @schedule.text %></p>
   <ul class="more_list">
     <li>
-      <%= link_to '編集', edit_schedule_path(schedule.id) %>
+      <%= link_to '編集', edit_schedule_path(@schedule.id) %>
     </li>
     <li>
-      <%= link_to '削除', schedule_path(schedule.id), method: :delete, data: {confirm: "削除しますか？"} %>
+      <%= link_to '削除', schedule_path(@schedule.id), method: :delete, data: {confirm: "削除しますか？"} %>
     </li>
   </ul>
 </div>
