--- a/app/views/schedules/update.html.erb
+++ b/app/views/schedules/update.html.erb
@@ -1,6 +1,8 @@
 <div class="contents">
-  <div class="success">
+  <div class="keyvisual__title keymessage__edit">
     <h3>スケジュールの更新が完了しました。</h3>
-    <a class="btn" href="/">スケジュール一覧へ</a>
+    <div class="section__btnWrapper">
+      <%= link_to 'スケジュール一覧へ', schedules_path, class: "section__btn" %>
+    </div>
   </div>
 </div>
