--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,45 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<div class="contents">
+  <h2 class="keyvisual__title keymessage_today">サインアップ</h2>
   
-  <div class="field">
-    <%= f.label :nickname %> <em>(6 characters maximum)</em><br />
-    <%= f.text_field :nickname, autofocus: true, maxlength: "6" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
+    
+    <div class="field field keyvisual__title keymessage_today detail__btn">
+      <%= f.label :ニックネーム %> <span>(6文字以内)</span><br />
+      <%= f.text_field :nickname, class: "content",  autofocus: true, maxlength: "6" %>
+    </div>
+  
+    <div class="field field keyvisual__title keymessage_today detail__btn">
+      <%= f.label :メールアドレス %><br />
+      <%= f.email_field :email, class: "content", autofocus: true, autocomplete: "email" %>
+    </div>
+    
+    <div class="field keyvisual__title keymessage_today detail__btn gender__btn">
+      <ul class="gender">
+        <li>
+          <%= f.label :性別を選択して下さい, class: "email__label" %><br />
+          <%= f.select :gender, [["男性", "男性"], ["女性", "女性"]], include_blank: "選択して下さい" %>
+        </li>
+      </ul>
+    </div>
+  
+    <div class="field field keyvisual__title keymessage_today detail__btn password__btn">
+      <%= f.label :パスワード %>
+      <% if @minimum_password_length %>
+      <span>(<%= @minimum_password_length %>文字以上)</span>
+      <% end %><br />
+      <%= f.password_field :password, class: "content", autocomplete: "new-password" %>
+    </div>
+  
+    <div class="field field keyvisual__title keymessage_today detail__btn">
+      <%= f.label :パスワード（確認のため再入力） %><br />
+      <%= f.password_field :password_confirmation, class: "content", autocomplete: "new-password" %>
+    </div>
+    
+    <div class="actions section__btnWrapper detail__btn">
+      <%= f.submit "サインアップ", class: "section__btn" %>
+    </div>
+  <% end %>
+  
+  <%= render "devise/shared/links" %>
+</div>
