--- a/app/views/introductions/index.html.erb
+++ b/app/views/introductions/index.html.erb
@@ -1,6 +1,6 @@
 <div class="top__contents">
   <div class="keyvisual">
-    <h1 class="keyvisual__title purpuse">このサービスの目的</h1>
+    <h1 class="keyvisual__title service-purpuse">このサービスの目的</h1>
     <p class="keyvisual__desc">このアプリは、夜のルーティーンを習慣化することを目的としています。</p>
     
     <h2 class="how_to_use">このサービスの使い方</h2>
