--- a/app/views/schedules/_schedule.html.erb
+++ b/app/views/schedules/_schedule.html.erb
@@ -3,7 +3,7 @@
     <%= schedule.created_at.month %><a>月</a>
     <%= schedule.created_at.day %><a>日</a><a>作成</a>
   </div>
-  <h2 class="keyvisual__title keymessage_today">明日やるべきこと</h2>
+  <h2 class="keyvisual__title tomorrow__task">明日やるべきこと</h2>
   <ul class="content_list_task">
     <li class="content_box_list"><span>1: </span><span class="task"><%= schedule.task1 %></span></li>
     <li class="content_box_list"><span>2: </span><span class="task"><%= schedule.task2 %></span></li>
@@ -12,7 +12,7 @@
     <li class="content_box_list"><span>5: </span><span class="task"><%= schedule.task5 %></span></li>
     <li class="content_box_list"><span>6: </span><span class="task"><%= schedule.task6 %></span></li>
   </ul>
-  <h2 class="keyvisual__title keymessage_today">To Doリスト</h2></h2>
+  <h2 class="keyvisual__title keymessage_to_do">To Doリスト</h2></h2>
   <ul class="content_list_task">
     <li class="content_box_list"><span>1: </span><span class="task"><%= schedule.content1 %></li>
     <li class="content_box_list"><span>2: </span><span class="task"><%= schedule.content2 %></li>
