--- a/app/views/schedules/update.html.erb
+++ b/app/views/schedules/update.html.erb
@@ -1,5 +1,5 @@
 <div class="contents">
-  <div class="keyvisual__title keymessage__edit">
+  <div class="keyvisual__title keymessage__update">
     <h3>スケジュールの更新が完了しました。</h3>
     <div class="section__btnWrapper">
       <%= link_to 'スケジュール一覧へ', schedules_path, class: "section__btn" %>
