--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,17 @@
-<h2>Forgot your password?</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+<div class="contents">  
+  
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
+  
+    <div class="field keyvisual__title keymessage_mail detail__btn">
+      <%= f.label :メールアドレス, class: "email__label" %><br />
+      <%= f.email_field :email, class: "content", autofocus: true, autocomplete: "email" %>
+    </div>
+  
+    <div class="actions section__btnWrapper detail__btn">
+      <%= f.submit "パスワードをリセットする", class: "section__btn" %>
+    </div>
+  <% end %>
+  
+  <%= render "devise/shared/links" %>
+</div>
