--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="contents">
-  <h2 class="keyvisual__title keymessage_today">ログイン</h2>
+  <h2 class="keyvisual__title login__headline">ログイン</h2>
 
   <%= form_for(@user) do |f| %>
     <div class="field keyvisual__title keymessage_today detail__btn">
